--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,11 @@
-@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);/*!
+@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);#footer {
+  margin-top: 30px;
+  padding: 20px;
+  color: #fff;
+  background: #333;
+}
+
+/*!
  * Bootstrap v4.0.0 (https://getbootstrap.com)
  * Copyright 2011-2018 The Bootstrap Authors
  * Copyright 2011-2018 Twitter, Inc.
